everything is unit tested

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^0.23.1",
     "jsdom": "9.8.0",
     "jsdom-global": "2.1.0",
+    "jshint": "^2.9.3",
     "mocha": "^2.2.5",
     "mocha-loader": "^0.7.1",
     "mock-local-storage": "^1.0.2",
